k8s/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
spec:
  ports:
  - port: 3001
  selector:
    app: api
